--- a/index.html
+++ b/index.html
@@ -14,26 +14,30 @@
         <pre>📧geetasrichitturi@gmail.com   📞+91 9346528713     📍West Godavri, Andhra Pradesh<br>
         <img src="./linkedin.png" width="15px"><a href="www.linkedin.com/in/geetasrichitturi">LinkedIn</a>      <img src="./github.jpeg" width="20px"><a href="https://github.com/Chitturi-Geetasri">GitHub</a>     <img src="./hackerrank.png" width="15px"><a href="">HackerRank</a></pre>
     </center>
+    <hr color="black" size="2"></hr>
     <b>PROFILE</b>
     <hr color="black" size="2"></hr>
     <p>Aspiring Python Full Stack Trainee with foundational skills in both Front-End and Back-End
 Technologies. Skilled in Python, HTML, Flask, JavaScript and Database management, like MySQL with Hands-on Experience using development tools like Python IDLE and VS Code. Quick learner with strong abilities, problem-solving skills and easy to grow in the Python Full Stack Develop</p>
+    <hr color="black" size="2"></hr>
     <b>EDUCATION</b>
     <hr color="black" size="2"></hr>
     <p><b>Bachelor of Technology</b>,Swarnandhra Institute of Engineering and Tehnology
     <pre>
-                                                                                                                                                    <i>2021 – 2025 Naspuram, India</i></pre></p>
+                                                                                                                                                <i>2021 – 2025 Naspuram, India</i></pre></p>
     <p><b>Intermediate</b>, Aditya Junior College
     <pre>
-                                                                                                                                                    <i>2019 – 2021 Palakollu, India</i></pre></p>
+                                                                                                                                                <i>2019 – 2021 Palakollu, India</i></pre></p>
     <p><b>SSC</b>, Sri Chaithanya Techno School
     <pre>
-                                                                                                                                                    <i>2018 – 2019 Palakollu, India</i></pre></p>
+                                                                                                                                                <i>2018 – 2019 Palakollu, India</i></pre></p>
+    <hr color="black" size="2"></hr>
     <b>PROFESSIONAL EXPERIENCE</b>
     <hr color="black" size="2"></hr>
     <p><b>Python Full Stack Trainee at Codegnan IT Solutions</b>.<pre>
         11/2025 – Present - Vijayawada,India</pre></p>
     <p>Learning Front-End Technologies like HTML, CSS and JavaScript.On the Back-End, practising Python with Flask and working with databases like MySQL.This training is helping me to improve problem-solving and understand the end-to-end development process. As a learner, I'm building my foundation to become a skilled Python full</p>
+    <hr color="black" size="2"></hr>
     <b>SKILLS</b>
     <hr color="black" size="2"></hr>
     <ul>
@@ -44,6 +48,7 @@ Technologies. Skilled in Python, HTML, Flask, JavaScript and Database management
         <li>Boot Strap</li>
         <li>Flask</li>
     </ul>
+    <hr color="black" size="2"></hr>
     <b>PROJECTS</b>
     <hr color="black" size="2"></hr>
     <b>Sequence Detector With Overlapping Patterns Team Lead, Narspuram</b>
@@ -54,12 +59,14 @@ Technologies. Skilled in Python, HTML, Flask, JavaScript and Database management
         <li>Implemented by using Verilog HDL.</li>
         <li>It is used in a Digital Communication System.</li>
     </ul>
+    <hr color="black" size="2"></hr>
     <b>CERTIFICATES</b>
     <hr color="black" size="2"></hr>
     <ul>
         <li>Python by FirstmanAcademy.</li>
         <li>Deep Learning by SkillDzire.</li>
     </ul>
+    <hr color="black" size="2"></hr>
     <b>STRENGTHS</b>
     <hr color="black" size="2"></hr>
     <ul>
@@ -68,6 +75,7 @@ Technologies. Skilled in Python, HTML, Flask, JavaScript and Database management
         <li>Responsible</li>
         <li>Frankness</li>
     </ul>
+    <hr color="black" size="2"></hr>
     <b>HOBBIES</b>
     <hr color="black" size="2"></hr>
     <ul>
@@ -75,6 +83,7 @@ Technologies. Skilled in Python, HTML, Flask, JavaScript and Database management
         <li>Travelling</li>
         <li>Cooking</li>
     </ul>
+    <hr color="black" size="2"></hr>
     <b>Languaues</b>
     <hr color="black" size="2"></hr>
     <ul>
