--- a/index.html
+++ b/index.html
@@ -9,55 +9,65 @@
     <center>
         <h1>GEETA SRI CHIITURI</h1>
         <h7>Pyhton Full Stack Trainee</h7><br>
-    </center><br>
+    </center>
     <center>
-        <pre>📧geetasrichitturi@gmail.com   📞+91 9346528713     📍West Godavri, Andhra Pradesh<br>
-        <img src="./linkedin.png" width="15px"><a href="www.linkedin.com/in/geetasrichitturi">LinkedIn</a>      <img src="./github.jpeg" width="20px"><a href="https://github.com/Chitturi-Geetasri">GitHub</a>     <img src="./hackerrank.png" width="15px"><a href="">HackerRank</a></pre>
+        <pre>📧geetasrichitturi@gmail.com   📞+91 9346528713    📍Andhra Pradesh, India<br>
+        <img src="./linkedin.png" width="15px"><a href="https://www.linkedin.com/in/geetasrichitturi/">LinkedIn</a>     <img src="./github.jpeg" width="20px"><a href="https://github.com/Chitturi-Geetasri">GitHub</a>     <img src="./hackerrank.png" width="15px"><a href="https://www.hackerrank.com/profile/srigeetha815">HackerRank</a></pre>
     </center>
     <hr color="black" size="2"></hr>
     <b>PROFILE</b>
     <hr color="black" size="2"></hr>
-    <p>Aspiring Python Full Stack Trainee with foundational skills in both Front-End and Back-End
-Technologies. Skilled in Python, HTML, Flask, JavaScript and Database management, like MySQL with Hands-on Experience using development tools like Python IDLE and VS Code. Quick learner with strong abilities, problem-solving skills and easy to grow in the Python Full Stack Develop</p>
+    <p>
+        Aspiring Python Full Stack Trainee with foundational skills in both Front-End and Back-End Technologies. Skilled in Python, HTML, Flask, JavaScript and Database management, like MySQL with Hands-on Experience using development tools like Python IDLE and VS Code. Quick learner with strong abilities, problem-solving skills and easy to grow in the Python Full Stack Develop</p>
     <hr color="black" size="2"></hr>
     <b>EDUCATION</b>
     <hr color="black" size="2"></hr>
-    <p><b>Bachelor of Technology</b>,Swarnandhra Institute of Engineering and Tehnology
+    <b>Bachelor of Technology</b>, Swarnandhra Institute of Engineering and Tehnology
     <pre>
-                                                                                                                                                <i>2021 – 2025 Naspuram, India</i></pre></p>
-    <p><b>Intermediate</b>, Aditya Junior College
+        2021 – 2025 Naspuram, India
+    </pre>
+    <b>Intermediate</b>, Aditya Junior College
     <pre>
-                                                                                                                                                <i>2019 – 2021 Palakollu, India</i></pre></p>
-    <p><b>SSC</b>, Sri Chaithanya Techno School
+        2019 – 2021 Palakollu, India
+    </pre>
+    <b>SSC</b>, Sri Chaithanya Techno School
     <pre>
-                                                                                                                                                <i>2018 – 2019 Palakollu, India</i></pre></p>
+        2018 – 2019 Palakollu, India
+    </pre>
     <hr color="black" size="2"></hr>
     <b>PROFESSIONAL EXPERIENCE</b>
     <hr color="black" size="2"></hr>
-    <p><b>Python Full Stack Trainee at Codegnan IT Solutions</b>.<pre>
-        11/2025 – Present - Vijayawada,India</pre></p>
-    <p>Learning Front-End Technologies like HTML, CSS and JavaScript.On the Back-End, practising Python with Flask and working with databases like MySQL.This training is helping me to improve problem-solving and understand the end-to-end development process. As a learner, I'm building my foundation to become a skilled Python full</p>
+    <b>Python Full Stack Trainee at Codegnan IT Solutions</b><br>
+        11/2025 – Present - Vijayawada,India
+    <ul>
+        <li>Learning Front-End Technologies like HTML, CSS and JavaScript.</li>
+        <li>On the Back-End, practising Python with Flask and working with databases like MySQL.</li>
+        <li>This training is helping me to improve problem-solving and understand the end-to-end development process. 
+        <li>As a learner, I'm building my foundation to become a skilled Python full</li>
+    </ul>
     <hr color="black" size="2"></hr>
     <b>SKILLS</b>
     <hr color="black" size="2"></hr>
-    <ul>
-        <li>Python</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Java Script</li>
-        <li>Boot Strap</li>
-        <li>Flask</li>
-    </ul>
+        <ul>
+            <li>Python</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Java Script</li>
+            <li>Boot Strap</li>
+            <li>Flask</li>
+        </ul>
     <hr color="black" size="2"></hr>
     <b>PROJECTS</b>
     <hr color="black" size="2"></hr>
-    <b>Sequence Detector With Overlapping Patterns Team Lead, Narspuram</b>
-    <p>Tools: Sequence Detector With Overlapping Patterns<br>
-        Team Lead, Narsapuram, Andhra Pradesh</p>
+    <b>
+        Sequence Detector With Overlapping Patterns
+    </b>
     <ul>
-        <li>Tools used: EDA playground and Xilinx.</li>
+        <li>Overlapping Patterns</li>
+        <li>Role: Team Lead</li>
         <li>Implemented by using Verilog HDL.</li>
         <li>It is used in a Digital Communication System.</li>
+        <li>Tools used: EDA playground and Xilinx.</li>
     </ul>
     <hr color="black" size="2"></hr>
     <b>CERTIFICATES</b>
