--- a/index.html
+++ b/index.html
@@ -101,5 +101,11 @@
         <li>Telugu</li>
         <li>Hindi</li>
     </ul>
+     <hr color="black" size="2"></hr>
+    <b>DECLARATION</b>
+    <hr color="black" size="2"></hr>
+    <P>
+        I here by declare that the above cited information is true to the best of my knowledge and belief, if given a chance, i can prove my self.
+    </P>
 </body>
 </html>
